# axiom-graph

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: public-ci.yml
axiom-annotations/: README.md
axiom-annotations/axiom_annotations_js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
axiom-annotations/axiom_annotations_js/src/: decorators.ts  exceptions.ts  index.ts  markers.ts  validation.ts
axiom-annotations/axiom_annotations_js/test/: decorators.test.ts  exceptions.test.ts  index.test.ts  markers.test.ts  validation.test.ts
axiom-annotations/axiom_annotations_py/: README.md  pyproject.toml
axiom-annotations/axiom_annotations_py/axiom_annotations/: __init__.py  decorators.py  exceptions.py  markers.py  validation.py
axiom_graph/: __init__.py  config.py  mcp_server.py  models.py  ontology.py  ontology.yaml  registry.py
axiom_graph/cli/: __init__.py  __main__.py  _core.py  indexing.py  inspection.py  rendering.py
axiom_graph/db/: __init__.py  _core.py  docs.py  edges.py  embeddings.py  history.py  nodes.py  staleness.py
axiom_graph/docjson/: __init__.py  api.py  mcp_tools.py  parse.py  render_agent.py  render_consumer.py
axiom_graph/index/: __init__.py  builder.py  db.py  embeddings.py  file_state.py  git_utils.py  link_maintenance.py  mark_clean.py  paths.py  rename_matcher.py  staleness.py  status.py
axiom_graph/lifecycle/: __init__.py  api.py  mcp_tools.py
axiom_graph/mcp/: __init__.py  _helpers.py  server.py
axiom_graph/query/: __init__.py  api.py  mcp_tools.py
axiom_graph/renderers/: __init__.py  agent.py
axiom_graph/scanners/: __init__.py  _step_helpers.py  config_scanner.py  doc_scanner.py  js_scanner.py  module_scanner.py  node_hashing.py  xstate_scanner.py
axiom_graph/viz/: __init__.py  _core.py  docs.py  nodes.py  server.py  workflows.py
axiom_graph/viz/static/: index.html
axiom_graph/workflows/: __init__.py  api.py  mcp_tools.py  validation.py
pev_nexus_agents/: AGENTS.md  CHANGELOG.md  README.md
pev_nexus_agents/hook-spike/: TROUBLESHOOTING.md
pev_nexus_agents/hook-spike/.claude-plugin/: plugin.json
pev_nexus_agents/pev/: DESIGN.md  README.md  SETUP.md  USER_GUIDE.md
pev_nexus_agents/pev/.claude-plugin/: plugin.json
pev_nexus_agents/pev/agents/: pev-architect.md  pev-audit-annotations-fixer.md  pev-audit-consumer-discovery.md  pev-audit-consumer-verifier.md  pev-audit-dev-shard.md  pev-auditor.md  pev-builder.md  pev-doc-reviewer.md  pev-reviewer.md  pev-spike.md
pev_nexus_agents/pev/docs/: .render-manifest.json  index.md  readme.md  setup.md  user-guide.md
pev_nexus_agents/pev/hooks/: hooks.json  pev-doc-scope.sh  pev-tool-counter.sh  pev-tool-gate.sh
pev_nexus_agents/pev/templates/: auditor-reference-protocol.md  cycle-manifest-template.json  doc-topology.json  link-audit-reference.md  pev-orchestrator-reference.md  review-criteria.json
tests/: conftest.py  test_annotation_nodes.py  test_annotation_staleness.py  test_annotation_validation.py  test_ast_validates_e2e.py  test_axiom_graph_rename.py  test_broken_links.py  test_builder_validates.py  test_checkout.py  test_cli_annotations.py  test_config_scanner.py  test_configurable_paths.py  test_consumer_render.py  test_diff.py  test_discovery_only_staleness.py  test_doc_section_staleness.py  test_doc_subtype.py  test_docjson_api_behavioural.py  test_docjson_shadow_invariant.py  test_drift_query.py  test_e2e_acceptance.py  test_e2e_git_lifecycle.py  test_file_state.py  test_frozen_tags_build_index.py  test_get_staleness_cause.py  test_git_utils.py  test_init_build.py  test_js_scanner.py  test_js_scanner_envelope.py  test_js_scanner_test_runner.py  test_layering_lint.py  test_lifecycle_api.py  test_link_maintenance.py  test_link_reconciliation.py  test_linked_stale_does_not_clear_on_section_edit.py  test_mark_clean_baseline.py  test_mark_clean_batch.py  test_mark_clean_mtime_freeze.py  test_mcp_tool_enhancements.py  test_mcp_tool_gaps.py  (+32 more)
tests/fixtures/ast_validates_no_annotation/: mymod.py  test_mymod.py
tools/: check_layering.py
userdocs/: .gitignore  conf.py  index.md
userdocs/_static/: custom.css
userdocs/cli/: index.md  indexing.md  inspection.md  rendering.md
userdocs/guide/: .render-manifest.json  index.md  viz.md
userdocs/guide/concepts/: annotations.md  docjson.md  history.md  index.md  (+3 more)
userdocs/mcp/: build.md  docs.md  history.md  index.md  search.md  staleness.md
(+83 files in other folders)
