[tool.poetry]
name = "axiom-annotations"
version = "0.1.0"
description = "Zero-dependency workflow/task/Step/AutoStep annotation markers used by axiom-graph."
authors = ["Dante Poe <dap182@pitt.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ddpoe/axiom-graph"
repository = "https://github.com/ddpoe/axiom-graph"
keywords = ["annotations", "decorators", "workflow", "documentation", "markers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{include = "axiom_annotations"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
